tests-integration/tests/snapshots/e2e__git_history__check_before.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "app.rs",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "new/fresh.rs",
      "status": "missing"
    }
  ]
}
