tests-integration/tests/snapshots/e2e__git_history__format_idempotent.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "app.rs",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "new/fresh.rs",
      "status": "clean"
    }
  ]
}
